Minimal changes to permanently switch from SecurityManager to Entitlements